Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-36185

Popup QDialog does not centre in parent in some cases

    XMLWordPrintable

Details

    Description

      Create a dialog with and setWindowFlags(Qt::FramelessWindowHint | Qt::Popup).

      The dialog centres in parent in Qt 4, but broken(shows at top left of the screen) in Qt 5 in some cases.

      Attachments

        1. Windows.png
          Windows.png
          125 kB
        2. Linux.png
          Linux.png
          113 kB
        3. QTBUG-36185.tgz
          0.9 kB

        Issue Links

          No reviews matched the request. Check your Options in the drop-down menu of this sections header.

          Activity

            People

              qt.team.quick.subscriptions Qt Quick and Widgets Team
              kongyi Yi Kong
              Votes:
              6 Vote for this issue
              Watchers:
              13 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There are no open Gerrit changes